--- a/sextoTrimestre/proyecto/src/app/components/sergio/sidebar/sidebar.component.scss
+++ b/sextoTrimestre/proyecto/src/app/components/sergio/sidebar/sidebar.component.scss
@@ -8,6 +8,8 @@
   justify-content: space-between;
   align-items: center;
   height: 70px;
+
+
 }
 
 .menu-icon, .close-icon {
@@ -24,7 +26,7 @@
   margin-top: 20px;
   width: 230px; /* Puedes ajustar el ancho según tus necesidades */
   background-color: #f8f8f8; /* f8f8f8 Color de fondo de la barra lateral */
-  position: fixed;
+  position: absolute;
   top: 50px; /* Ajusta según la altura de tu barra horizontal */
   left: -230px;
   height: 100vh;
