--- a/sextoTrimestre/proyecto/src/app/components/sergio/statistics-instructores/statistics-instructores.component.scss
+++ b/sextoTrimestre/proyecto/src/app/components/sergio/statistics-instructores/statistics-instructores.component.scss
@@ -1,23 +1,68 @@
-/* statistics-instructores.component.scss */
+
+.filtro-container {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  max-width: 1000px;
+}
+
+.filtro-container label {
+  font-size: 13px;
+  color: #4d4d4d;
+}
+
+.filtro-container input,
+.filtro-container select {
+  padding: 5px;
+  font-size: 14px;
+  border: 1px solid #57a7a5;
+  border-radius: 5px;
+  margin-left: 5px;
+  margin-right: 15px;
+  outline: none;
+}
+
+.filtro-container select option {
+  font-size: 14px;
+}
+
+.filtro-buttons {
+  display: flex;
+  gap: 10px;
+}
+
+.filtro-buttons button {
+  background-color: #57a7a5;
+  color: white;
+  padding: 9px 15px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+.filtro-buttons button:hover {
+  background-color: #4d8a83;
+}
 
 .container {
   display: flex;
   height: 100vh;
   justify-content: right;
   margin: 0 auto;
-  padding: 0;
-  max-width: 1000px;
+  max-width: 100%;
+  overflow: hidden;
 
 }
 
 .statistics-container {
-  margin-left: 2000px; /* Ajusta según sea necesario para alinear con la barra lateral */
+  overflow: hidden;
+  margin-left: 110px; /* Ajusta según sea necesario para alinear con la barra lateral */
   flex-grow: 1; /* Ocupa todo el espacio restante */
   padding: 60px; /* Añade espacio alrededor del contenido estadístico */
 }
 
 h2 {
-  margin: 20px;
   color: #333; /* Color de texto principal */
 }
 
