correción estilos de filtrado instructores

--- a/sextoTrimestre/proyecto/src/app/components/sergio/statistics-instructores/statistics-instructores.component.scss
+++ b/sextoTrimestre/proyecto/src/app/components/sergio/statistics-instructores/statistics-instructores.component.scss
@@ -59,7 +59,7 @@
   overflow: hidden;
   margin-left: 110px; /* Ajusta según sea necesario para alinear con la barra lateral */
   flex-grow: 1; /* Ocupa todo el espacio restante */
-  padding: 60px; /* Añade espacio alrededor del contenido estadístico */
+  padding: 30px;
 }
 
 h2 {
