--- a/sextoTrimestre/proyecto/src/app/components/marlon/blog/blog.component.css
+++ b/sextoTrimestre/proyecto/src/app/components/marlon/blog/blog.component.css
@@ -122,15 +122,6 @@ button {
 }
 
 /*Crear Blog*/
-.container {
-    margin-top: 40px;
-    box-shadow: 0 5px 9px rgba(5, 5, 5, 0.1); 
-    padding: 20px; 
-    background-color: #ffffff; 
-    border-radius: 10px; 
-    width: 700px;
-  }
- 
   .subir{
     margin-top: 20px;
   }
@@ -232,16 +223,18 @@ button {
 
 
 .btn-cancelar {
-  color: #fff; 
-  background-color: #ff0000; 
+  color:#f5f5f5; 
+  background-color: #850606; 
   border: none;
   border-radius: 5px; 
   padding: 0.5rem 1rem; 
+  text-decoration: none;
+  font-weight: bold;
   transition: background-color 0.3s ease; 
 }
 
 .btn-cancelar:hover {
-  background-color: #cc0000; 
+  background-color:#850606; 
 }
 .card-date {
   position: absolute;
