--- a/sextoTrimestre/proyecto/src/app/components/katalina/ver-horarios/ver-horarios.component.html
+++ b/sextoTrimestre/proyecto/src/app/components/katalina/ver-horarios/ver-horarios.component.html
@@ -39,14 +39,15 @@
         </ul>
   </div>
 </nav>
-  <h2 class="subtitulo mt-5">Horarios</h2>
-  <div class="instagram-div">
-    <img class="image" src="assets/imagenes/Horario.png" alt="Portada">
-        <div class="name">Horario Trimestre 7</div>
-        <button class="button">Ver Horario</button>
-        <p class="description">Descripción del usuario...</p>
-  </div>
 
-<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.3/dist/umd/popper.min.js"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+<h2 class="subtitulo mt-5">Horarios</h2>
+
+<div class="noticias-container">
+  <div *ngFor="let horario of newsList" class="instagram-div">
+    <p class="date">{{ horario.fechaPublicacion | date:'dd/MM/yyyy' }}</p>
+    <h3 class="titulo">{{ horario.nombre }}</h3>
+    <img src="assets/imagenes/Horario.png" class="card-img-top" alt="Imagen Opcional">
+    <p class="card-text"><strong>Descripción:</strong>{{ horario.comentario }}</p>
+    <button class="boton" (click)="descargarArchivo(horario.urlArchivo, horario.nombreArchivo)">Ver Archivo</button>
+  </div>
+</div>
