--- a/sextoTrimestre/proyecto/src/app/components/katalina/ver-horarios/ver-horarios.component.scss
+++ b/sextoTrimestre/proyecto/src/app/components/katalina/ver-horarios/ver-horarios.component.scss
@@ -11,48 +11,72 @@
 }
 
 /* Container */
+.titulo {
+  color: #0a7775;
+  text-align: center;
+  font-weight: bolder;
+  font-family: "Outfit", sans-serif;
+  font-size: 25px;
+  font-style: normal;
+}
+
 .instagram-div {
-  margin-left: 30px;
-  max-width: 350px;
-  height: 500px;
+  margin-top: 20px;
+  max-width: 300px;
+  width: 100%;
   background-color: #ffffff;
   border-radius: 10px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-  padding: 20px;
   text-align: center;
-  flex-direction: column;
+  padding: 10px;
+  margin-bottom: 6px;
+  box-sizing: border-box;
 }
 
-.image {
-  width: 100%;
+.instagram-div img {
+  max-width: 80%;
   height: auto;
-  border-radius: 10px;
-  margin-bottom: 20px;
-}
-
-.name {
-  font-size: 24px;
-  font-weight: bold;
-  margin-bottom: 5px;
-}
-
-.button {
-  background-color: #0a7775;
-  color: #ffffff;
-  padding: 10px 20px;
-  font-size: 18px;
-  border: none;
   border-radius: 8px;
-  cursor: pointer;
-  margin-top: 10px;
+  margin-bottom: 10px;
 }
 
-.description {
-  font-size: 16px;
+.instagram-div p {
+  margin-top: 10px;
+  font-size: 15px;
   color: #262626;
-  margin-top: 10px;
+}
+.date{
+  font-weight: bolder;
+  margin-top: auto;
+  text-align: right;
+}
+.noticias-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+}
+.boton{
+    background-color: #088a88;
+    color: #fff; 
+    padding: 10px 20px; 
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    transition: background-color 0.3s;
 }
 
+.boton:hover {
+  background-color: #0f9b98; 
+}
+
+
+
+/* Media Query para pantallas más pequeñas (ej. 600px) */
+@media (max-width: 600px) {
+  .instagram-div {
+    max-width: 80%; /* Ajusta el ancho al 100% para ocupar todo el ancho de la pantalla */
+  }
+}
 
 /* Estilos Nav */
 nav{
