--- a/sextoTrimestre/proyecto/src/app/components/marlon/horarios/horarios.component.html
+++ b/sextoTrimestre/proyecto/src/app/components/marlon/horarios/horarios.component.html
@@ -14,7 +14,7 @@
         <a routerLink="/blog" class="nav-link" aria-current="page">Blog</a>
       </li>
       <li class="nav-item">
-        <a routerLink="/actvidad" class="nav-link">Actividades</a>
+        <a routerLink="/actividad" class="nav-link">Actividades</a>
       </li>
       <li class="nav-item">
         <a routerLink="/asistencia" class="nav-link">Asistencias</a>
